--- a/main.html
+++ b/main.html
@@ -117,6 +117,7 @@
       <canvas id="clientQR"></canvas>
     </div>
     <button class="logout button" onclick="logout()">Cerrar Sesión</button>
+    <button class="rewards button" onclick="location.href='rewards.html';">Ver Recompensas</button>
   </main>
 
   <script type="module">
