--- a/main.html
+++ b/main.html
@@ -64,6 +64,12 @@
       font-weight: bold;
     }
 
+    .button-container {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+    }
+
     button {
       background-color: #FFA500; /* Botón de color naranja */
       color: white;
@@ -72,9 +78,7 @@
       border-radius: 4px;
       cursor: pointer;
       font-size: 16px;
-      display: block;
-      width: 100%;
-      margin-top: 20px;
+      width: calc(50% - 10px);
       transition: background-color 0.3s ease;
     }
 
@@ -116,8 +120,10 @@
       <p>Puntos: <span id="clientPuntos"></span></p>
       <canvas id="clientQR"></canvas>
     </div>
-    <button class="logout button" onclick="logout()">Cerrar Sesión</button>
-    <button class="rewards button" onclick="location.href='rewards.html';">Ver Recompensas</button>
+    <div class="button-container">
+      <button class="rewards button" onclick="location.href='rewards.html';">Ver Recompensas</button>
+      <button class="logout button" onclick="logout()">Cerrar Sesión</button>
+    </div>
   </main>
 
   <script type="module">
