--- a/main.html
+++ b/main.html
@@ -118,7 +118,7 @@
       <p>Puntos: <span id="clientPuntos"></span></p>
       <canvas id="clientQR"></canvas>
       <div class="button-container">
-        <button class="rewards button" onclick="location.href='rewards1.html';">Ver Recompensas</button>
+        <button class="rewards button" onclick="location.href='rewards.html';">Ver Recompensas</button>
       </div>
     </div>
     <button class="logout button" onclick="logout()">Cerrar Sesión</button>
