--- a/rewards.html
+++ b/rewards.html
@@ -107,7 +107,7 @@
     </style>
 </head>
 <body>
-    <img src="logo.png" alt="Logo Electrolum" id="logo">
+    <img src="Logo.png" alt="Logo Electrolum" id="logo">
     <h1>ElectroRecompensas</h1>
     <div class="rewards-container" id="rewards-container"></div>
     <button id="back-to-profile">Volver a Perfil</button>
