--- a/main.html
+++ b/main.html
@@ -65,8 +65,9 @@
     }
 
     .button-container {
+      display: flex;
+      justify-content: space-between;
       margin-top: 20px;
-      text-align: center;
     }
 
     button {
@@ -77,6 +78,7 @@
       border-radius: 4px;
       cursor: pointer;
       font-size: 16px;
+      width: calc(50% - 10px);
       transition: background-color 0.3s ease;
     }
 
@@ -117,11 +119,11 @@
       <p>Cédula: <span id="clientCedula"></span></p>
       <p>Puntos: <span id="clientPuntos"></span></p>
       <canvas id="clientQR"></canvas>
-      <div class="button-container">
-        <button class="rewards button" onclick="location.href='rewards.html';">Ver Recompensas</button>
-      </div>
     </div>
-    <button class="logout button" onclick="logout()">Cerrar Sesión</button>
+    <div class="button-container">
+      <button class="rewards button" onclick="location.href='rewards.html';">Ver Recompensas</button>
+      <button class="logout button" onclick="logout()">Cerrar Sesión</button>
+    </div>
   </main>
 
   <script type="module">
