--- a/rewards.html
+++ b/rewards.html
@@ -108,7 +108,7 @@
 </head>
 <body>
     <img src="Logo.png" alt="Logo Electrolum" id="logo">
-    <h1>ElectroRecompensas</h1>
+    <h1>Productos de Canje</h1>
     <div class="rewards-container" id="rewards-container"></div>
     <button id="back-to-profile">Volver a Perfil</button>
 
