--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
-            background-color: #1a1a1a; /* Fondo azul oscuro */
-            color: #ffa500; /* Color naranjita para texto */
+            background-color: #1a1a1a;
+            color: #ffa500;
         }
         h1 {
             text-align: center;
-            color: #ffa500; /* Color naranjita */
+            color: #ffa500;
         }
         .search-form {
             text-align: center;
@@ -30,25 +30,30 @@
             margin-top: 20px;
             margin-bottom: 10px;
         }
-        .category h2 {
+        .category-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             background-color: #ffa500;
             color: white;
-            padding: 10px;
+            padding: 0px;
             border-radius: 4px;
         }
         .products {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            overflow-x: auto;
             gap: 20px;
             margin-top: 10px;
+            padding-bottom: 10px;
         }
         .product {
-            max-width: 300px;
+            min-width: 100px;
+            max-width: 200px;
             background: #f9f9f9;
             padding: 10px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            flex: 0 0 auto;
         }
         .product img {
             max-width: 100%;
@@ -65,10 +70,9 @@
         .logo {
             display: block;
             margin: 0 auto;
-            max-width: 150px; /* Ajusta el tamaño del logo según sea necesario */
+            max-width: 150px;
             margin-bottom: 20px;
         }
-        /* Estilos para el menú inferior */
         .bottom-menu {
             display: flex;
             justify-content: space-around;
@@ -81,7 +85,6 @@
             bottom: 0;
             left: 0;
         }
-
         .bottom-menu a {
             color: #1E2A38;
             text-decoration: none;
@@ -89,15 +92,23 @@
             text-align: center;
             flex-grow: 1;
         }
-
         .bottom-menu a:hover {
             color: #FFA500;
         }
-
         .bottom-menu a img {
             max-width: 25px;
             display: block;
             margin: 0 auto 5px;
+        }
+        .view-more a {
+            background-color: #007bff;
+            color: white;
+            padding: 15px 10px;
+            text-decoration: none;
+            border-radius: 4px;
+        }
+        .view-more a:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -111,34 +122,53 @@
     </div>
 
     <div class="category" id="electrical">
-        <h2>Eléctrico</h2>
+        <div class="category-header">
+            <h2>Eléctrico</h2>
+            <div class="view-more">
+                <a href="electrical.html">Ver más</a>
+            </div>
+        </div>
         <div class="products" id="electrical-products">
             <!-- Productos eléctricos se listan aquí -->
         </div>
     </div>
 
     <div class="category" id="lighting">
-        <h2>Iluminación</h2>
+        <div class="category-header">
+            <h2>Iluminación</h2>
+            <div class="view-more">
+                <a href="lighting.html">Ver más</a>
+            </div>
+        </div>
         <div class="products" id="lighting-products">
             <!-- Productos de iluminación se listan aquí -->
         </div>
     </div>
 
     <div class="category" id="security">
-        <h2>Seguridad</h2>
+        <div class="category-header">
+            <h2>Seguridad</h2>
+            <div class="view-more">
+                <a href="security.html">Ver más</a>
+            </div>
+        </div>
         <div class="products" id="security-products">
             <!-- Productos de seguridad se listan aquí -->
         </div>
     </div>
 
     <div class="category" id="other">
-        <h2>Otros</h2>
+        <div class="category-header">
+            <h2>Otros</h2>
+            <div class="view-more">
+                <a href="other.html">Ver más</a>
+            </div>
+        </div>
         <div class="products" id="other-products">
             <!-- Otros productos se listan aquí -->
         </div>
     </div>
 
-    <!-- Menú inferior -->
     <div class="bottom-menu">
         <a href="main.html">
             <img src="icons/home-icon.png" alt="Inicio">
@@ -187,7 +217,7 @@
 
         // Función para obtener y mostrar productos por categoría
         function getProductsByCategory(category, container) {
-            db.collection("Productos").where("categoria", "==", category).get()
+            db.collection("Productos").where("categoria", "==", category).limit(5).get()
             .then(function(querySnapshot) {
                 querySnapshot.forEach(function(doc) {
                     const product = doc.data();
