--- a/lamparas.html
+++ b/lamparas.html
@@ -31,7 +31,7 @@
             margin-bottom: 10px;
         }
         .category h2 {
-            background-color: #4CAF50;
+            background-color: #FFA200;
             color: white;
             padding: 10px;
             border-radius: 4px;
