--- a/lamparas.html
+++ b/lamparas.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
-            background-color: #1a1a1a; /* Fondo azul oscuro */
+            background-color: #010756; /* Fondo azul oscuro */
             color: #ffa500; /* Color naranjita para texto */
         }
         h1 {
