--- a/main.html
+++ b/main.html
@@ -183,7 +183,7 @@
             Perfil
         </a>
         <a href="catalogo.html">
-            <img src="icons/catalog-icon.png" alt="Catálogo">
+            <img src="icons/catalog-icon.png" alt="Ruleta">
             Catálogo
         </a>
         <a href="buscar-trabajadores.html">
