--- a/inicio.html
+++ b/inicio.html
@@ -173,8 +173,8 @@
       Perfil
     </a>
     <a href="catalogo.html">
-      <img src="icons/catalog-icon.png" alt="Catálogo">
-      Catálogo
+      <img src="icons/catalog-icon.png" alt="Ruleta">
+      Ruleta
     </a>
     <a href="buscar-trabajadores.html">
       <img src="icons/search-icon.png" alt="Electricistas">
