--- a/main.html
+++ b/main.html
@@ -184,7 +184,7 @@
         </a>
         <a href="catalogo.html">
             <img src="icons/ruleta-icon.png" alt="Ruleta">
-            Catálogo
+            Ruleta
         </a>
         <a href="buscar-trabajadores.html">
             <img src="icons/search-icon.png" alt="Electricistas">
