--- a/perfil.html
+++ b/perfil.html
@@ -193,8 +193,8 @@
       <span>Perfil</span>
     </a>
     <a href="catalogo.html">
-      <img src="icons/catalog-icon.png" alt="Catálogo">
-      <span>Catálogo</span>
+      <img src="icons/catalog-icon.png" alt="Ruleta">
+      <span>Ruleta</span>
     </a>
     <a href="buscar-trabajadores.html">
       <img src="icons/search-icon.png" alt="Buscar Trabajadores">
