--- a/lamparas.html
+++ b/lamparas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electrolum - Productos</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,6 +68,24 @@
             max-width: 150px; /* Ajusta el tamaño del logo según sea necesario */
             margin-bottom: 20px;
         }
+        /* Estilos para el modal */
+        .modal-content {
+            background-color: #fff;
+            color: #000;
+            margin: -20;
+        }
+        .modal-header {
+            border-bottom: none;
+        }
+        .close {
+            font-size: 1.5rem;
+            color: #000;
+            opacity: 1;
+        }
+        .carousel-inner img {
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -84,6 +103,50 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="carouselModal" tabindex="-1" role="dialog" aria-labelledby="carouselModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://i.imgur.com/6QaBEte.jpeg" class="d-block w-100" alt="First Slide" onclick="window.location.href='https://www.instagram.com/p/C7o_G_Qxp_C/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=='">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://i.imgur.com/sCXGajh.jpeg" class="d-block w-100" alt="Second Slide" onclick="window.location.href='https://electrolum.github.io/Electrolum/register.html'">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://i.imgur.com/IrmbyG0.jpeg" class="d-block w-100" alt="Third Slide" onclick="window.location.href='https://wa.link/c2v3zz'">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script>
@@ -150,6 +213,11 @@
 
         // Agrega un event listener al input para ejecutar la búsqueda en tiempo real
         document.getElementById('searchInput').addEventListener('input', searchProducts);
+
+        // Mostrar el modal al cargar la página
+        $(document).ready(function() {
+            $('#carouselModal').modal('show');
+        });
     </script>
 </body>
 </html>
