--- a/lamparas.html
+++ b/lamparas.html
@@ -86,6 +86,10 @@
             width: 100%;
             height: auto;
         }
+        .modal-content h4 {
+            color: black;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -108,6 +112,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
+        	<h4>⚠️Novedades⚠️</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
