--- a/Admin/usuarios.html
+++ b/Admin/usuarios.html
@@ -141,6 +141,7 @@
         </div>
         <div class="menu">
             <a href="admin.html">Inicio</a>
+            <a href="canjear.html">Canjear</a>
             <a href="reportes.html">Reportes</a>
             <a href="usuarios.html">Clientes</a>
         </div>
