--- a/Admin/canjear.html
+++ b/Admin/canjear.html
@@ -145,6 +145,7 @@
             <a href="canjear.html">Canjear</a>
             <a href="reportes.html">Reportes</a>
             <a href="usuarios.html">Clientes</a>
+            <a href="rewards.html">Rewards</a>
         </div>
     </div>
 
