--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -179,9 +179,9 @@
             </form>
 
             <form id="removePointsForm">
-                <label for="removePoints" style="color: #666;">Quitar puntos:</label>
+                <label for="removePoints" style="color: #666;">No funciona!!!!:</label>
                 <input type="number" id="removePoints" name="removePoints" min="0" required>
-                <button type="submit" style="background-color: #f44336;">Quitar</button>
+                <button type="submit" style="background-color: #f44336;">No vale!!!</button>
             </form>
         </div>
 
