--- a/rewards.html
+++ b/rewards.html
@@ -6,9 +6,10 @@
     <title>ElectroRecompensas</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* Estilos generales */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #343a40; /* Fondo azul oscuro */
+            font-family: 'Poppins', sans-serif; /* Fuente moderna */
+            background-color: #1E2A38; /* Fondo azul oscuro */
             color: #fff; /* Texto blanco */
             display: flex;
             flex-direction: column;
@@ -20,76 +21,105 @@
         }
 
         h1 {
-            color: #f0ad4e; /* Color naranja */
+            color: #FFA500; /* Naranja brillante */
             text-align: center;
             margin-bottom: 20px;
+            font-size: 2.5rem;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
         }
 
-        #logo {
-            max-width: 200px;
-            width: 100%;
-            margin-bottom: 20px;
-        }
-
+        /* Contenedor de recompensas */
         .rewards-container {
-            background-color: #343a40; /* Fondo azul oscuro */
+            background-color: #fff;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            margin-bottom: 40px;
             width: 100%;
             max-width: 800px;
             box-sizing: border-box;
+            animation: slideIn 0.6s ease-out;
         }
 
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Estilos de cada recompensa */
         .reward-item {
-            background-color: #fff;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 10px;
+            background-color: #f5f5f5;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
             display: flex;
             align-items: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .reward-item:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
         }
 
         .reward-item img {
             width: 100px;
             height: auto;
-            border-radius: 4px;
+            border-radius: 8px;
             margin-right: 20px;
         }
 
         .reward-item-details {
             display: flex;
             flex-direction: column;
-            justify-content: center;
         }
 
         .reward-item h3 {
             color: #007BFF;
             margin: 5px 0;
+            font-size: 1.4rem;
+            font-weight: 600;
         }
 
-        .reward-item p {
-            color: #333;
-            margin: 5px 0;
-        }
-
-        #back-to-profile {
-            margin-top: 20px;
+        /* Diseño de la caja para los puntos */
+        .reward-item .points-box {
             background-color: #007BFF;
             color: #fff;
+            padding: 8px 16px;
+            border-radius: 25px;
+            display: inline-block;
+            font-size: 1.2rem;
+            margin-top: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Botón de volver */
+        #back-to-profile {
+            background-color: #FFA500; /* Naranja brillante */
+            color: white;
             border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
+            padding: 12px 24px;
+            border-radius: 8px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            margin-top: 30px;
+            width: 100%;
+            max-width: 300px;
         }
 
         #back-to-profile:hover {
-            background-color: #0056b3;
+            background-color: #FF8C00; /* Naranja más oscuro al hacer hover */
+            transform: translateY(-4px);
         }
 
+        /* Estilos responsivos */
         @media (max-width: 600px) {
             body {
                 padding: 10px;
@@ -97,17 +127,21 @@
 
             .rewards-container {
                 padding: 15px;
-                margin-bottom: 15px;
+                margin-bottom: 20px;
             }
 
             .reward-item img {
                 width: 80px;
             }
+
+            #back-to-profile {
+                font-size: 1rem;
+                padding: 10px 20px;
+            }
         }
     </style>
 </head>
 <body>
-    <img src="Logo.png" alt="Logo Electrolum" id="logo">
     <h1>Productos de Canje</h1>
     <div class="rewards-container" id="rewards-container"></div>
     <button id="back-to-profile">Volver a Perfil</button>
@@ -157,8 +191,9 @@
                 rewardDetails.className = 'reward-item-details';
                 const rewardName = document.createElement('h3');
                 rewardName.textContent = reward.name;
-                const rewardPoints = document.createElement('p');
-                rewardPoints.textContent = `Puntos requeridos: ${reward.points}`;
+                const rewardPoints = document.createElement('div');
+                rewardPoints.className = 'points-box';
+                rewardPoints.textContent = `Puntos: ${reward.points}`;
 
                 // Agregar imagen y detalles a la tarjeta de recompensa
                 rewardDetails.appendChild(rewardName);
